test/fail/errors/MultipleFixityDecl.agda

module MultipleFixityDecl where

infixl 40 _+_
infixr 60 _+_

_+_ : Set -> Set -> Set
A + B = A

